--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
     <!-- htmx (light enhancement for activity load) -->
     <script src="https://unpkg.com/htmx.org@1.9.12" integrity="sha384-ujb0ls6zq4smxN7qQ1wUj3Psf2f4Qf3aBv/Qo9n0SMa2N9y5y0Jz8mH8C2bW9I3N" crossorigin="anonymous"></script>
 
-    <link rel="icon" href="/assets/logo.svg">
+    <link rel="icon" href="assets/logo.svg">
 </head>
 <body class="min-h-screen bg-slate-50 text-slate-800 font-sans antialiased">
     <!-- Top Nav (capsule, sticky) -->
@@ -95,7 +95,7 @@
         <div class="mx-auto max-w-7xl px-4 sm:px-6 lg:px-8 pt-2 pb-1">
             <div class="mx-auto flex h-14 max-w-5xl items-center justify-between rounded-full border border-slate-200 bg-white px-4 shadow-md">
                 <div class="flex items-center gap-3">
-                    <img src="/assets/logo.svg" alt="Logo" class="h-7 w-7">
+                    <img src="assets/logo.svg" alt="Logo" class="h-7 w-7">
                     <span class="inline-flex items-center gap-2">
                         <span class="font-semibold tracking-tight text-slate-900">OpsForge</span>
                         <span class="hidden sm:inline rounded-full border border-slate-200 bg-slate-50 px-2 py-0.5 text-xs text-slate-700">Ops Suite</span>
