--- a/index.html
+++ b/index.html
@@ -86,6 +86,24 @@
         .image-card-grid {
             align-items: stretch;
         }
+
+        .image-card-grid > article {
+            display: flex;
+            min-height: 400px;
+        }
+
+        @media (min-width: 768px) {
+            .image-card-grid > article {
+                min-height: 500px;
+            }
+        }
+
+        .image-card-grid img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            object-position: center;
+        }
     </style>
 
     <!-- htmx (light enhancement for activity load) -->
@@ -247,12 +265,12 @@
 
                 <!-- Top Image Cards -->
                 <div class="image-card-grid mt-10 grid grid-cols-1 md:grid-cols-2 gap-4">
-                    <article class="group rounded-xl border border-slate-200 bg-white p-0 shadow-sm hover:shadow-md hover:border-slate-300 transition-all duration-200 overflow-hidden flex items-center">
-                        <img src="assets/fastByDefault.png" alt="Fast by default" class="w-full h-auto">
+                    <article class="group rounded-xl border border-slate-200 bg-white p-0 shadow-sm hover:shadow-md hover:border-slate-300 transition-all duration-200 overflow-hidden">
+                        <img src="assets/fastByDefault.png" alt="Fast by default">
                     </article>
 
-                    <article class="group rounded-xl border border-slate-200 bg-white p-0 shadow-sm hover:shadow-md hover:border-slate-300 transition-all duration-200 overflow-hidden flex items-center">
-                        <img src="assets/userAdministration.png" alt="User administration" class="w-full h-auto">
+                    <article class="group rounded-xl border border-slate-200 bg-white p-0 shadow-sm hover:shadow-md hover:border-slate-300 transition-all duration-200 overflow-hidden">
+                        <img src="assets/userAdministration.png" alt="User administration">
                     </article>
                 </div>
 
